--- a/match/static/css/match_main.css
+++ b/match/static/css/match_main.css
@@ -28,7 +28,21 @@ body{
 }
 .page_nation{
     display:flex;
-    height:100%;width:auto;align-items:center;
+    height:100%;
+
+}
+
+.page_nation_bottom{
+    display:flex;
+    height:100%;
+    align-items:flex-start;
+}
+
+.tag_detail{
+    display:flex;
+    color:black;
+    font-weight:650;
+    font-size:1.1vw;
 
 }
 
@@ -40,7 +54,7 @@ body{
 }
 
 .board_area{
-    height:35vh;
+    height:30vh;
     width:80%;
     margin:0px auto;
     display:flex;
@@ -62,11 +76,23 @@ body{
     cursor:default;
 }
 
+.tag_detail{
+    width:15%;
+    height:25vh;
+    font-size:1vw;
+    display:flex;
+    width:100%;
+    justify-content:space-around;
+    align-items:flex-start;
+    margin-top:5vh;
+}
 .tag_area{
-    height:60vh;
+    height:auto;
     width:100%;
     background:#f5f5f5;
+
 }
+
 .recruit_title{
     display:flex;
     justify-content:center;
@@ -80,8 +106,6 @@ body{
     display:flex;
     justify-content:space-around;
     font-weight:700;
-
-
 }
 
 .circle{
@@ -98,6 +122,15 @@ body{
     color:white;
     display:flex;
     text-decoration:none;
+    align-items:center;
+}
+
+.inner_circle_bottom{
+    font-size:2vw;
+    color:white;
+    display:flex;
+    text-decoration:none;
+
 }
 .circle:hover{
     cursor:pointer;
