--- a/match/templates/match.html
+++ b/match/templates/match.html
@@ -20,7 +20,7 @@
 
     <div class = "board_area"> <!--실제 게시글이 들어갈 위치 -->
         {% if posts.has_previous %}
-        <a href = "?page={{posts.previous_page_number}}" class = "page_nation" style="text-decoration:none">
+        <a href = "?page1={{posts.previous_page_number}}" class = "page_nation" style="text-decoration:none;">
             <div class = "circle">
                 <div class = "inner_circle">⇦</div>
             </div></a>
@@ -30,7 +30,7 @@
         <div class = "board_detail">
             <!--어떤 종류의 게시글인지 보여줌 -->
             <div class = "top_board_detail">
-                <div style="font-size:0.8vw;color:#BBBABA">
+                <div style="font-size:0.8vw;color:#BBBABA" class = "recruit_field">
                     {{ temp.recruit_field }}
                 </div>
                 <div style="font-size:1.1vw;color:#3165B1" class = "top_content_date">
@@ -51,7 +51,7 @@
         {% endfor %}
 
         {% if posts.has_next %}
-        <a href = "?page={{posts.next_page_number}}" class = "page_nation" style="text-decoration:none;">
+        <a href = "?page1={{posts.next_page_number}}" class = "page_nation" style="text-decoration:none;">
             <div class = "circle">
                 <div class = "inner_circle">⇨</div>
             </div>
@@ -65,7 +65,31 @@
     <div class = "text_area">
         <text style="font-size:2vw;">태그 별</text>
     </div>
-</div>
+    <div class = "board_area" style="width:60%;">
+        {% if Posts.has_previous %}
+        <div class= "tag_detail">
+        <a href = "?page2={{Posts.previous_page_number}}" class = "page_nation" style="text-decoration:none;align-items:flex-start;">
+            <div class = "circle">
+                <div class = "inner_circle_bottom">⇦</div>
+            </div></a>
+        </div>
+        {% endif %}
+
+        {% for Temp in Posts %}
+        <div class = "tag_detail">
+            {{ Temp.hashtag_content | safe }}
+        </div>
+        {% endfor %}
+        {% if Posts.has_next %}
+        <div class = "tag_detail">
+        <a href = "?page2={{Posts.next_page_number}}" class = "page_nation" style="text-decoration:none;align-items:flex-start;">
+            <div class = "circle">
+                <div class = "inner_circle_bottom">⇨</div>
+            </div>
+        </a>
+        </div>
+        {% endif %}
+    </div>
 </div>
 
 <script src = "{% static 'js/match_main.js' %}"></script>
