--- a/match/static/match/css/match_main.css
+++ b/match/static/match/css/match_main.css
@@ -4,20 +4,30 @@
  font-family: 'Noto Sans KR', sans-serif;
 }
 
-.bycategory{
+*{
+    align-items: center;
+}
+
+/*카테고리별*/
+
+.middlebox{
+    margin-top: 100px;
+}
+
+.titleword{
     color:#56b198;
     font-weight: 500;
     font-family: 'Noto Sans KR', sans-serif;
+    text-align: left;
 }
 
-.categorybox{
-    margin-top:80px;
-}
-
-.findcate{
-    width:550px;
+.searchtext{
+    width:560px;
     height:45px;
-    border:3px solid #56b198;
+    border:3px solid;
+    border-image: linear-gradient(to right, #3165b1, #56b198);
+    border-image-slice: 1;
+    border-radius: 10px;
 }
 
 .srchbutton{
@@ -31,26 +41,148 @@
     transition: 0.25s;
     background: linear-gradient(#56b198, #3165b1);
     color: white;
+    border-radius: 10px;
 }
 
-.cate{
+.category{
     margin: 20px auto;
     padding: 20px;
     width: 700px;
-    height: 500px;
+    height: 1000px;
     border: 2px solid #56b198;
     font-family: 'Noto Sans KR', sans-serif;
-}
-.navbar-nav a{
-    color:#999;
-    font-weight: 600;
+    border-radius: 10px;
 }
 
 .catepost{
+    margin: 10px;
     width: 650px;
-    height: 400px;
+    height: 130px;
+    background-color:rgb(245, 245, 245);
 }
 
-.line{
-    border-top: 1px solid rgb(233, 233, 233);
+.nav-link{
+    color: #999;
+}
+
+.nav-link:hover{
+    color:black;
+}
+
+/*사이드 스크롤 바*/
+.float_sidebar{
+    position: fixed;
+    top: 100px;
+    right: 200px;
+    width: 140px;
+    height: 330px;
+    transition: 0.25s;
+    border-radius: 10px;
+}
+
+
+.content{
+    position: absolute;
+    left: 4px;
+    width: 130px;
+    height: 280px;
+    border: 1px solid #56b198;
+    transition: 0.25s;
+    border-radius: 10px;
+}
+
+.latelyselected{
+    margin: 5px;
+    font-size: 13px;
+}
+
+.latelywatchedpost{
+    width: 110px;
+    height: 110px;
+    margin: 10px;
+    background-color: rgb(233, 233, 233);
+}
+
+/*쓱 버튼*/
+.ssgupbutton{
+    position: absolute;
+    left: 5px;
+    top: 280px;
+    width: 40px;
+    height: 40px;
+    padding: 3px;
+    translate: 0.1s;
+    animation-delay: 0.1s;
+}
+
+/* 태그별 */
+
+.bottombox{
+    margin-top: 100px;
+    align-items: center;
+    display: flex;
+    width: 100%;
+}
+
+.tagbox{
+    text-align: center;
+    width: 100%;
+}
+
+#slide-wrapper{
+    max-width: 500px;
+    display: flex;
+    min-height: 30px;
+    align-items: center;
+}
+
+#slider{
+    background-color: #999;
+    max-width: 440px;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: hidden;
+}
+
+.arrow{
+    cursor: pointer;
+    transition: .3s;
+}
+
+.arrow:hover{
+    opacity: .5s;
+    width: 45px;
+    height: 45px;
+}
+
+.button{
+    border: none;
+    font-size: 16px;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 15px;
+    cursor: pointer;
+    font-family: 'Noto Sans KR', sans-serif;
+    transition: all 0.3s ease;
+}
+
+.button:hover{
+    background:  rgb(219, 219, 219);
+}
+
+
+
+.tagpostlist{
+    display: flex;
+    align-items: center;
+}
+
+.tagpost{
+    width: 270px;
+    height: 170px;
+    margin: 20px;
+    border: 2px solid rgb(220, 219, 219);
+    display:flex;
+    align-items: center;
 }
