--- a/match/static/css/match_main.css
+++ b/match/static/css/match_main.css
@@ -54,7 +54,7 @@ body{
 }
 
 .board_area{
-    height:30vh;
+    height:auto;
     width:80%;
     margin:0px auto;
     display:flex;
@@ -69,6 +69,7 @@ body{
 
 .board_detail{
     margin-top:3vh;
+    margin-bottom:3vh;
     border:1px solid #51a998;
     width:15%;
     height:25vh;
@@ -140,4 +141,222 @@ body{
 
 circle{
     cursor:pointer;
+}
+
+
+ .recruit_project, .recruit_club, .recruit_study, .recruit_survey{
+    display:none;
+    cursor:pointer;
+}
+.recruit_all, .recruit_study, .recruit_club, .recruit_project, .recruit_survey{
+    display:flex;
+    flex-direction:column;
+
+}
+.list div{
+    cursor:pointer;
+    font-size:0.8vw;
+}
+
+.list div:hover{
+    color:gray;
+    font-weight:700;
+}
+
+.recruit_all a,.recruit_study a, .recruit_club a, .recruit_project a, .recruit_survey a{
+    width:35%;
+    border-bottom:1px solid #c1c1c1;
+    margin-top:5%;
+    text-decoration:none;
+}
+
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+.notosanskr * {
+ font-family: 'Noto Sans KR', sans-serif;
+}
+
+*{
+    align-items: center;
+}
+
+/*카테고리별*/
+
+.middlebox{
+    margin-top: 5vh;
+    font-size:1vw;
+}
+
+.titleword{
+    color:#56b198;
+    font-weight: 500;
+    font-family: 'Noto Sans KR', sans-serif;
+    text-align: left;
+}
+
+.searchtext{
+    width:30%;
+    height:5%;
+    border:3px solid;
+    border-image: linear-gradient(to right, #3165b1, #56b198);
+    border-image-slice: 1;
+    border-radius: 10px;
+}
+
+.srchbutton{
+    margin: 5px;
+    position: relative;
+    padding: 10px 30px;
+    border: none;
+    font-family: 'Noto Sans KR', sans-serif;
+    text-decoration: none;
+    font-weight: 500;;
+    transition: 0.25s;
+    background: linear-gradient(#56b198, #3165b1);
+    color: white;
+    border-radius: 10px;
+}
+
+.category{
+    margin: 8px auto;
+    padding:10px;
+    width: 60%;
+    height:auto;
+    border: 2px solid #56b198;
+    font-family: 'Noto Sans KR', sans-serif;
+    border-radius: 10px;
+}
+
+#catepost{
+    margin: 10px auto;
+    width: 90%;
+    height: 12%;
+    background-color:rgb(245, 245, 245);
+}
+
+.nav-link{
+    color: #999;
+}
+
+.nav-link:hover{
+    color:black;
+}
+
+/*사이드 스크롤 바*/
+.float_sidebar{
+    position: fixed;
+    top: 100px;
+    right: 200px;
+    width: 140px;
+    height: 330px;
+    transition: 0.25s;
+    border-radius: 10px solid #51a998;
+}
+
+
+.content{
+    position: absolute;
+    left: 4px;
+    width: 130px;
+    height: 12%;
+    border: 1px solid #56b198;
+    transition: 0.25s;
+    border-radius: 10px;
+}
+
+.latelyselected{
+    margin: 5px;
+    font-size: 13px;
+}
+
+.latelywatchedpost{
+    width: 110px;
+    height: 110px;
+    margin: 10px;
+    background-color: rgb(233, 233, 233);
+}
+
+/*쓱 버튼*/
+.ssgupbutton{
+    position: absolute;
+    left: 5px;
+    top: 280px;
+    width: 2vw;
+    height: 2vh;
+    padding: 3px;
+    translate: 0.1s;
+    animation-delay: 0.1s;
+}
+
+
+/* 태그별 */
+
+.bottombox{
+    margin-top: 100px;
+    align-items: center;
+    display: flex;
+    width: 100%;
+}
+
+.tagbox{
+    text-align: center;
+    width: 100%;
+}
+
+#slide-wrapper{
+    max-width: 500px;
+    display: flex;
+    min-height: 30px;
+    align-items: center;
+}
+
+#slider{
+    background-color: #999;
+    max-width: 440px;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: hidden;
+}
+
+.arrow{
+    cursor: pointer;
+    transition: .3s;
+}
+
+.arrow:hover{
+    opacity: .5s;
+    width: 45px;
+    height: 45px;
+}
+
+.button{
+    border: none;
+    font-size: 16px;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 15px;
+    cursor: pointer;
+    font-family: 'Noto Sans KR', sans-serif;
+    transition: all 0.3s ease;
+}
+
+.button:hover{
+    background:  rgb(219, 219, 219);
+}
+
+
+
+.tagpostlist{
+    display: flex;
+    align-items: center;
+}
+
+.tagpost{
+    width: 270px;
+    height: 170px;
+    margin: 20px;
+    border: 2px solid rgb(220, 219, 219);
+    display:flex;
+    align-items: center;
 }
