--- a/match/templates/match.html
+++ b/match/templates/match.html
@@ -5,17 +5,21 @@
     {% block css %}
     <title>Match</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel = "stylesheet" href = "{% static 'css/match_main.css' %}">
     {% endblock css %}
 </head>
 
 <body>
 {% block content %}
+
 <div class="top_container"> <!--모집 마감 임박 -->
     <div class = "text_area">
         <text style="font-size:2vw;">모집 마감 임박</text>
         <img src = "{% static 'img/match_home_logo.png' %}" style="width:2.8vw;">
-
     </div>
 
     <div class = "board_area"> <!--실제 게시글이 들어갈 위치 -->
@@ -61,84 +65,177 @@
 </div>
 
 
-<div class = "tag_area">
-    <div class = "text_area">
-        <text style="font-size:2vw;">태그 별</text>
-    </div>
-    <div class = "board_area" style="width:60%;">
-        {% if Posts.has_previous %}
-        <div class= "tag_detail">
-            <a href = "?page2={{Posts.previous_page_number}}" class = "page_nation" style="text-decoration:none;align-items:flex-start;">
-                <div class = "circle">
-                    <div class = "inner_circle_bottom">⇦</div>
-                </div></a>
-        </div>
-        {% endif %}
+<!--카테고리-->
+<div class="middlebox">
+    <h4 class="titleword" style="margin-left:15%;font-size:2vw;">카테고리별</h4>
 
-        {% for Temp in Posts %}
-        <div class = "tag_detail">
-            {{ Temp.hashtag_content | safe }}
+
+        <form class="sea" action="" method="GET">
+            <input class="searchtext" type="text" v-model="word" name = "q" value = "{{ q }}"/>
+            <button class="srchbutton" type="submit" v-on:click="search" value = "검색" onclick = "display_search()">SEARCH</button>
+        </form>
+
+
+    <div class="category">
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link" href = "#" style="color:#3f3f3f;font-weight:700" onclick = "recruit_all()">전체</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="color:#3f3f3f;font-weight:700" href="#" onclick = "recruit_club()">소모임</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="color:#3f3f3f;font-weight:700" href="#" onclick = "recruit_study()">스터디</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="color:#3f3f3f;font-weight:700" href="#" onclick = "recruit_project()">프로젝트</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="color:#3f3f3f;font-weight:700" href="#" onclick = "recruit_survey()">설문조사</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="color:#3f3f3f;font-weight:700" href="#">번개</a>
+            </li>
+        </ul>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="#">인기순</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">최신순</a>
+            </li>
+        </ul>
+        <!--키테고리게시글-->
+        {% for recruit_all in recruit_all.all %}
+        <div id="catepost" class = "recruit_all">
+
+            <div>
+                <a href="{% url 'study_detail' recruit_all.id %}" style="color:black;font-weight:600;font-size:1.3rem;">
+                    {{ recruit_all.recruit_title }}</a>
+
+            </div>
         </div>
         {% endfor %}
-        {% if Posts.has_next %}
-        <div class = "tag_detail">
-            <a href = "?page2={{Posts.next_page_number}}" class = "page_nation" style="text-decoration:none;align-items:flex-start;">
-                <div class = "circle">
-                    <div class = "inner_circle_bottom">⇨</div>
+
+        {% for recruit_field_study in recruit_field_study.all %}
+        <div id = "catepost" class = "recruit_study">
+            <div></div>
+            <a href = "{% url 'study_detail' recruit_field_study.id %}" style="color:black;font-weight:600;font-size:1.3rem;">
+                {{ recruit_field_study.recruit_title }}</a>
+
+        </div>
+    </div>
+        {% endfor %}
+
+        {% for recruit_field_club in recruit_field_club.all %}
+        <div id = "catepost" class = "recruit_club">
+            <div>
+            <a href = "{% url 'study_detail' recruit_field_club.id %}" style="color:black;font-weight:600;font-size:1.3rem;">
+                {{ recruit_field_club.recruit_title }}</a>
+
                 </div>
+        </div>
+        {% endfor %}
+
+        {% for recruit_field_project in recruit_field_project.all %}
+        <div id = "catepost" class = "recruit_project">
+            <div>
+            <a href = "{% url 'study_detail ' recruit_field_project.id %}" style="color:black;font-weight:600;font-size:1.3rem;">
+                {{ recruit_field_project.recruit_title }}</a>
+            </div>
+        </div>
+        {% endfor %}
+
+    {% for recruit_field_survey in recruit_field_survey.all %}
+    <div id = "catepost" class = "recruit_survey">
+        <div>
+            <a href = "{% url 'study_detail' recruit_field_survey.id %">
+                {{ recruit_field_survey.recruit_title }}
+                {% for hashtag in recruit_field_survey.recruit_hashtag %}
+                {{ hashtag }}
+                {% endfor %}
+            </a>
+
+        </div>
+    </div>
+        {% endfor %}
+
+        {% for q in q.all %}
+        <div id = "catepost" class = "recruit_q">
+            <a href = "{% url 'study_detail' q.id %">
+                {{ p.recruit_title }}
             </a>
         </div>
-        {% endif %}
+        {% endfor %}
+
+    </div>
+    <div class="float_sidebar">
+        <div class="content">
+            <section class="latelyselected">
+                <p>최근 본 게시물</p>
+            </section>
+            <div class="latelywatchedpost"></div>
+            <div class="latelywatchedpost"></div>
+        </div>
+        <a href="#" class="ssgupbutton"><img src="{% static 'match/img/circlessg.png' %}" alt="mdo" width="35" height="35"></a>
     </div>
 </div>
 
+<div class = "tag_area">
+    <div class = "text_area">
+        <text style="font-size:2vw;"># 태그 별</text>
+    </div>
 
+    <div id = "myCarousel" class = "carousel slide slider" date-ride = "carousel">
+        <ol class = "carousel-indicators" style="background-color:green;visibility: hidden;">
+            {% for Temp in Posts %}
+            <li data-target="#myCarousel" data-slide-to = "{{ Temp.id }}" class="{% if forloop.first%}active{%endif%}" style="color:green">
+            </li>
+            {% endfor %}
+        </ol>
 
-    <br><br>
-    카테고리별
-    <br>
+        <div class = "carousel-inner" style="width:100%;height:30%;background:#f5f5f5;">
+            {% for Temp in Posts %}
+            <div class="item{% if forloop.first %} active{% endif %}">
+                <a style="cursor:pointer;color:black;text-decoration:none;" href = "{% url 'hashtag_detail' Temp.id %}"><h3 style = "color:black;text-decoration:none;">{{ Temp.hashtag_content }}</h3></a>
+            </div>
+            {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev" style="background:#51a998;border-radius:50%;margin-left:12%;width:3.5rem;height:3.5rem;
+        ">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" data-slide="next" style="background:#51a998;border-radius:50%;margin-right:12%;width:3.5rem;height:3.5rem;
+        ">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+    </div>
 
-    스터디
-    {% for recruit_field_study in recruit_field_study.all %}
-        <a href="{% url 'study_detail' recruit_field_study.id %}">{{ recruit_field_study.recruit_title }}</a>
-        <br>
-    {% endfor %}
-    <br>
-
-    소모임
-    {% for recruit_field_club in recruit_field_club.all %}
-        <a href="{% url 'study_detail' recruit_field_club.id %}">{{ recruit_field_club.recruit_title }}</a>
-        {{ recruit_field_club.hashtag}}
-        <br>
-    {% endfor %}
-    <br>
-
-    프로젝트
-    {% for recruit_field_project in recruit_field_project.all %}
-        <a href="{% url 'study_detail' recruit_field_project.id %}">{{ recruit_field_project.recruit_title }}</a>
-        {{ recruit_field_project.hashtag}}
-        <br>
-    {% endfor %}
-    <br>
-
-    설문조사
-    {% for recruit_field_survey in recruit_field_survey.all %}
-        <a href="{% url 'study_detail' recruit_field_survey.id %}">{{ recruit_field_survey.recruit_title }}</a>
-        {{ recruit_field_survey.hashtag}}
-        <br>
-    {% endfor %}
-    <br>
-
-
-       <form class="sea" action="" method="GET">
-        <input type="text" name="q" value="{{ q }}">
-        <input type="submit" value="검색">
-    </form>
-
-
-
-
+</div>
 <script src = "{% static 'js/match_main.js' %}"></script>
+<script>
+  let buttonRight = document.getElementById('slideRight');
+  let buttonLeft = document.getElementById('slideLeft');
+
+  buttonLeft.addEventListener('click', function(){
+    document.getElementById('slider').scrollLeft -= 180
+  });
+
+  buttonRight.addEventListener('click', function(){
+    document.getElementById('slider').scrollLeft += 180
+
+  });
+
+  $('.slider').slick({
+  slidesToShow: 3,
+  slidesToScroll: 1,
+  dots: true,
+  centerMode: true,
+  focusOnSelect: true
+});
+
+</script>
+
 {% endblock %}
 </body>
 </html>
