--- a/about/templates/about_qna_write.html
+++ b/about/templates/about_qna_write.html
@@ -42,6 +42,7 @@
 
     </form>
     {% else %}
+    <a href = "{url 'login' %}">로그인</a>
     로그인해야 QnA 작성이 가능합니다.
     {% endif %}
 
@@ -67,5 +68,5 @@
     </div>
 </form>
 {% else %}
-로그인해야 QnA 작성이 가능합니다.
+
 {% endif %}
