--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 {% block css %}
 
 {% endblock css %}
@@ -48,7 +49,12 @@
 
                 <!-- 유저 로그인 중이면 -->
                 {% if user.is_active %}
+                {% if user.nickname %}
                 <li style=" margin-left: 15px; margin-right:15px; color:gray;"><a style="color:#56b198;">{{user.nickname}}</a> 님 안녕하세요!</li>
+                {% endif %}
+                {% if user.email %}
+                <li style=" margin-left: 15px; margin-right:15px; color:gray;"><a style="color:#56b198;">{{user.email}}</a> 님 안녕하세요!</li>
+                {% endif %}
                 <div class="dropdown text-end">
                     {% if user.profile_image %}
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
