--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load socialaccount %}
+{% providers_media_js %}
 {% block css %}
 <link rel="stylesheet" type="text/css" href="{% static 'home/css/base.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'home/css/user.css' %}" />
@@ -46,7 +47,11 @@
           </label> -->
         </div>
         <button class="btn-lg btn-user" type="submit" value="LOGIN">Login</button>
-
+        
+        <div>
+        <a href = "{% provider_login_url 'google' %}"><img src = "{% static 'home/img/google.png' %}" style = "width:auto;height:46px;"></a>
+        </div>
+        
         <p class="mt-4 mb-3 text-muted">아직 계정이 없다면? <a style="color:#56b198;" href="{% url 'signup' %}"> 회원가입</a></p>
       </form>
     </div>
